[gd_scene load_steps=7 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://sprites/muro.png" type="Texture" id=2]
[ext_resource path="res://sprites/foguete.png" type="Texture" id=3]
[ext_resource path="res://Foguete2.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43.5, 11 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33.125, 126.125 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Parede" type="Sprite" parent="."]
position = Vector2( 869.219, 138.844 )
scale = Vector2( 0.975633, 0.684889 )
texture = ExtResource( 2 )

[node name="Foguete" type="Sprite" parent="."]
position = Vector2( 116, 207 )
z_index = -1
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 710.0
margin_top = 243.0
margin_right = 761.0
margin_bottom = 274.0
text = "...
"

[node name="LabelFoguete2" type="Label" parent="."]
margin_left = 704.0
margin_top = 530.0
margin_right = 781.0
margin_bottom = 562.0

[node name="Button" type="Button" parent="."]
margin_left = 13.0
margin_top = 541.0
margin_right = 126.0
margin_bottom = 575.0
text = "Disparar"

[node name="Foguete2" type="KinematicBody2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foguete2"]
position = Vector2( 138.5, 369 )
shape = SubResource( 1 )

[node name="Foguete2" type="Sprite" parent="Foguete2"]
position = Vector2( 130, 369 )
texture = ExtResource( 3 )

[node name="Parede2" type="Area2D" parent="."]

[node name="Parede2" type="Sprite" parent="Parede2"]
position = Vector2( 871.063, 455.563 )
scale = Vector2( 1.04873, 0.696801 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parede2"]
position = Vector2( 865.125, 456 )
shape = SubResource( 2 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="body_entered" from="Parede2" to="." method="_on_Parede2_body_entered"]
